# PyStructAnalyzer

./: .gitignore  README.md  main.py  pyproject.toml
src/directory_structure/: directory_structure.py
src/pystruct_analyzer/: __init__.py  directory_printer.py  explainer.py  printer.py  structure.py
