[project]
name = "pystructanalyzer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sunyeul", email = "res1235@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "openai>=1.41.0",
    "python-dotenv>=1.0.1",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
    "ipykernel>=6.29.5",
]
